Add content, base design

--- a/index.html
+++ b/index.html
@@ -4,14 +4,47 @@
 	<meta charset="utf-8">
 	<title>John Smith</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="styles/bundle.min.css">
+	<link href="styles/bundle.min.css" rel="stylesheet" >
+	<link href="styles/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 	<section id="about">
+		<h1>About me</h1>
+		<div class="container">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
+		</div>
 	</section>
 	<section id="skills">
+		<h1>Skills</h1>
+		<dl class="skills-diagram">
+		  <dt class="skill-5">UNIX</dt>
+		  <dd>5</dd>
+		  <dt class="skill-10">Ruby</dt>
+		  <dd>10</dd>
+		  <dt class="skill-3">Java</dt>
+		  <dd>3</dd>
+		  <dt class="skill-8">PHP</dt>
+		  <dd>8</dd>
+		  <dt class="skill-4">RegEx</dt>
+		  <dd>4</dd>
+		  <dt class="skill-6">HTML5</dt>
+		  <dd>6</dd>
+		  <dt class="skill-7">JavaScript</dt>
+		  <dd>7</dd>
+		  <dt class="skill-9">CSS</dt>
+		  <dd>9</dd>
+		  <dt class="skill-2">C#</dt>
+		  <dd>2</dd>
+		</dl>
 	</section>
 	<footer id="contact">
+		<h1>Contact</h1>
+		<div class="container">
+			<a class="fa fa-5x fa-github" href="#" target="_blank"></a>
+			<a class="fa fa-5x fa-file" href="#" target="_blank"></a>
+			<a class="fa fa-5x fa-linkedin" href="#" target="_blank"></a>
+			<a class="fa fa-5x fa-twitter" href="#" target="_blank"></a>
+		</div>
 	</footer>
 </body>
 </html>
