--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 	<meta charset="utf-8">
 	<title>John Smith</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 	<link href="styles/bundle.min.css" rel="stylesheet" >
 	<link href="styles/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 	<section id="about">
+		<header>
+			<i class="fa fa-user"></i>
+			<h1>John Smith</h1>
+		</header>
 		<h1>About me</h1>
 		<div class="container">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
@@ -41,7 +46,7 @@
 		<h1>Contact</h1>
 		<div class="container">
 			<a class="fa fa-5x fa-github" href="#" target="_blank"></a>
-			<a class="fa fa-5x fa-file" href="#" target="_blank"></a>
+			<a class="fa fa-5x fa-skype" href="#" target="_blank"></a>
 			<a class="fa fa-5x fa-linkedin" href="#" target="_blank"></a>
 			<a class="fa fa-5x fa-twitter" href="#" target="_blank"></a>
 		</div>
