--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>John Smith</title>
+	<title>Nabilla Benattia</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 	<link href="styles/bundle.min.css" rel="stylesheet" >
@@ -11,10 +11,9 @@
 <body>
 	<section id="about">
 		<header>
-			<i class="fa fa-user"></i>
-			<h1>John Smith</h1>
+			<img src="img/nabi.png">
+			<h1>Nabilla Benattia</h1>
 		</header>
-		<h1>About me</h1>
 		<div class="container">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
 		</div>
