--- a/index.html
+++ b/index.html
@@ -71,7 +71,25 @@
 				</section>
 
 				<section>
-					<h2>Code</h2>
+					<section>
+						<h2>Codelab</h2>
+						<p>
+							<pre><code class="bash">
+								git clone https://github.com/ababol/codelab-gruntless.git
+							</code></pre>
+						</p>
+					</section>
+					<section>
+						<p>
+							<pre><code class="bash">
+								git checkout step-2
+
+								# S'il demande de commit et qu'il ne peut switch
+								git stash
+								git clean -f
+							</code></pre>
+						</p>
+					</section>
 				</section>
 
 				<section>
